--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,11 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.6'
 }
 
+tasks.named('test') {
+    useJUnitPlatform()
+    jvmArgs '-Xshare:off' // JVM 아규먼트 설정
+}
+
 group = 'org.example'
 version = '0.0.1-SNAPSHOT'
 
